--- a/.github/workflows/wp-publish.yml
+++ b/.github/workflows/wp-publish.yml
@@ -1,4 +1,4 @@
-name: PHP Composer
+name: Publish to Wordpress
 
 on:
   push:
@@ -10,30 +10,36 @@ permissions:
   contents: read
 
 jobs:
-  build:
-
+  publish:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-
-    - name: Validate composer.json and composer.lock
-      run: composer validate --strict
-
-    - name: Cache Composer packages
-      id: composer-cache
-      uses: actions/cache@v3
-      with:
-        path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-php-
-
-    - name: Install dependencies
-      run: composer install --prefer-dist --no-progress
-
+    
     - name: WordPress Plugin Deploy
       uses: 10up/action-wordpress-plugin-deploy@2.2.2
+            
+  # build:
+
+  #   runs-on: ubuntu-latest
+
+  #   steps:
+  #   - uses: actions/checkout@v4
+
+  #   - name: Validate composer.json and composer.lock
+  #     run: composer validate --strict
+
+  #   - name: Cache Composer packages
+  #     id: composer-cache
+  #     uses: actions/cache@v3
+  #     with:
+  #       path: vendor
+  #       key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+  #       restore-keys: |
+  #         ${{ runner.os }}-php-
+
+  #   - name: Install dependencies
+  #     run: composer install --prefer-dist --no-progress
             
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
