--- a/.github/workflows/wp-publish.yml
+++ b/.github/workflows/wp-publish.yml
@@ -1,49 +1,32 @@
-name: Publish to Wordpress
-
+name: Deploy to WordPress.org
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
-permissions:
-  contents: read
-
+  release:
+    types: [published]
 jobs:
-  publish:
+  tag:
+    name: New release
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
-    
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Build
+      run: |
+        npm install
+        npm run build
     - name: WordPress Plugin Deploy
-      uses: 10up/action-wordpress-plugin-deploy@2.2.2
-            
-  # build:
-
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #   - uses: actions/checkout@v4
-
-  #   - name: Validate composer.json and composer.lock
-  #     run: composer validate --strict
-
-  #   - name: Cache Composer packages
-  #     id: composer-cache
-  #     uses: actions/cache@v3
-  #     with:
-  #       path: vendor
-  #       key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-  #       restore-keys: |
-  #         ${{ runner.os }}-php-
-
-  #   - name: Install dependencies
-  #     run: composer install --prefer-dist --no-progress
-            
-
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
-
-    # - name: Run test suite
-    #   run: composer run-script test
+      id: deploy
+      uses: 10up/action-wordpress-plugin-deploy@stable
+      with:
+        generate-zip: true
+      env:
+        SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
+        SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
+    - name: Upload release asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ github.event.release.upload_url }}
+        asset_path: ${{ steps.deploy.outputs.zip-path }}
+        asset_name: ${{ github.event.repository.name }}.zip
+        asset_content_type: application/zip
