--- a/.github/workflows/wp-publish.yml
+++ b/.github/workflows/wp-publish.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          path: public
+          path: public/js
       - name: Build
         run: |
           npm install
